tests/fixtures/invalid/w004/unverified_behavior.spec
behavior unverified_action "No Verify" {
  contract """this behavior has no verify statements"""
}
